--- a/Welbex/index.html
+++ b/Welbex/index.html
@@ -5,15 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welbex</title>
-    <link rel="stylesheet" href="./index.css" />
+    <link href="/mobile.css" rel="stylesheet" type="text/css">
+    <link href="/index.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <img src="/purple light.svg" alt="purple-light" class="purple-light" />
     <img src="/red light.svg" alt="red-light" class="red-light" />
     <img src="/purple ball.png" alt="purple-ball" class="purple-ball" />
-    <img src="/red ball.png" alt="red-ball-1" class="red-ball-1" />
-    <img src="/red ball.png" alt="red-ball-2" class="red-ball-2" />
-    <nav class="menu">
+    <img src="/red ball.png" alt="red-ball" class="red-ball" />
+    <img src="/red ball-1.png" alt="red-ball-1" class="red-ball-1" />
+    <header class="header-top">
+      <div class="m-header">
+        <ul class="m-h-list">
+          <li><a href="#" class="m-li-text">Услуги</a></li>
+          <li><a href="#" class="m-li-text">Виджеты</a></li>
+          <li><a href="#" class="m-li-text">Интеграции</a></li>
+          <li><a href="#" class="m-li-text">Кейсы</a></li>
+      </div>
+    </header>
+    <header class="menu">
       <div class="left-menu">
         <div class="logo-big">
           <div class="logo-img">
@@ -46,7 +56,7 @@
           <img src="/Vector wa.svg" alt="wa" class="logo-h" />
         </ul>
       </div>
-    </nav>
+    </header>
     <div class="center">
       <div class="left-center">
         <h1 class="left-c-text">Зарабатывайте больше</h1>
@@ -61,6 +71,12 @@
           </p>
         </div>
         <div class="right-c-blks">
+        <ul class="m-bl">
+          <li class="m-li"><p class="m-bl-text">Skype аудит</p></li>
+          <li class="m-li"><p class="m-bl-text">Dashboard</p></li>
+          <li class="m-li"><p class="m-bl-text">30 виджетов</p></li>
+          <li class="m-li"><p class="m-bl-text">Месяц аmoCRM</p></li>
+        </ul>
           <div class="right-c-bl">
             <h1 class="r-c-h">Виджеты</h1>
             <p class="r-c-desc">30 готовых решений</p>
@@ -87,7 +103,7 @@
       <div class="ft-left-orien">
         <div class="left-ftr">
           <h1 class="ft-hd-txt">О компании</h1>
-            <ul class="ft-li">
+            <ul class="ft-li-1">
               <li><a href="#" class="ft-li-txt">Партнёрская программа</a></li>
               <li><a href="#" class="ft-li-txt">Вакансии</a></li>
             </ul>
@@ -102,6 +118,18 @@
               <li class="ft-li-a"><a href="#" class="ft-li-txt">Наши клиенты</a></li>
               <li class="ft-li-a"><a href="#" class="ft-li-txt">Кейсы</a></li>
               <li class="ft-li-a"><a href="#" class="ft-li-txt">Благодарственные письма</a></li>
+              <li class="ft-li-a"><a href="#" class="ft-li-txt">Сертификаты</a></li>
+              <li class="ft-li-a"><a href="#" class="ft-li-txt">Блог на Youtube</a></li>
+              <li class="ft-li-a"><a href="#" class="ft-li-txt">Вопрос / Ответ</a></li>
+            </ul>
+            <ul class="m-ft-li">
+              <li class="ft-li-a"><a href="#" class="ft-li-txt">Расчёт стоимости</a></li>
+              <li class="ft-li-a"><a href="#" class="ft-li-txt">Услуги</a></li>
+              <li class="ft-li-a"><a href="#" class="ft-li-txt">Виджеты</a></li>
+              <li class="ft-li-a"><a href="#" class="ft-li-txt">Интеграции</a></li>
+              <li class="ft-li-a"><a href="#" class="ft-li-txt">Наши клиенты</a></li>
+              <li class="ft-li-a"><a href="#" class="ft-li-txt">Благодарственные письма</a></li>
+              <li class="ft-li-a"><a href="#" class="ft-li-txt">Кейсы</a></li>
               <li class="ft-li-a"><a href="#" class="ft-li-txt">Сертификаты</a></li>
               <li class="ft-li-a"><a href="#" class="ft-li-txt">Блог на Youtube</a></li>
               <li class="ft-li-a"><a href="#" class="ft-li-txt">Вопрос / Ответ</a></li>
